; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/vt/extr_vt_core.c_vt_resume_flush_timer.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/vt/extr_vt_core.c_vt_resume_flush_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vt_window = type { %struct.vt_device* }
%struct.vt_device = type { i32, i32, %struct.vt_window* }

@VDF_ASYNC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vt_resume_flush_timer(%struct.vt_window* %0, i32 %1) #0 {
  %3 = alloca %struct.vt_window*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.vt_device*, align 8
  store %struct.vt_window* %0, %struct.vt_window** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.vt_window*, %struct.vt_window** %3, align 8
  %7 = getelementptr inbounds %struct.vt_window, %struct.vt_window* %6, i32 0, i32 0
  %8 = load %struct.vt_device*, %struct.vt_device** %7, align 8
  store %struct.vt_device* %8, %struct.vt_device** %5, align 8
  %9 = load %struct.vt_device*, %struct.vt_device** %5, align 8
  %10 = getelementptr inbounds %struct.vt_device, %struct.vt_device* %9, i32 0, i32 2
  %11 = load %struct.vt_window*, %struct.vt_window** %10, align 8
  %12 = load %struct.vt_window*, %struct.vt_window** %3, align 8
  %13 = icmp ne %struct.vt_window* %11, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %2
  br label %32

15:                                               ; preds = %2
  %16 = load %struct.vt_device*, %struct.vt_device** %5, align 8
  %17 = getelementptr inbounds %struct.vt_device, %struct.vt_device* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = load i32, i32* @VDF_ASYNC, align 4
  %20 = and i32 %18, %19
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %27

22:                                               ; preds = %15
  %23 = load %struct.vt_device*, %struct.vt_device** %5, align 8
  %24 = getelementptr inbounds %struct.vt_device, %struct.vt_device* %23, i32 0, i32 1
  %25 = call i32 @atomic_cmpset_int(i32* %24, i32 0, i32 1)
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %28, label %27

27:                                               ; preds = %22, %15
  br label %32

28:                                               ; preds = %22
  %29 = load %struct.vt_device*, %struct.vt_device** %5, align 8
  %30 = load i32, i32* %4, align 4
  %31 = call i32 @vt_schedule_flush(%struct.vt_device* %29, i32 %30)
  br label %32

32:                                               ; preds = %28, %27, %14
  ret void
}

declare dso_local i32 @atomic_cmpset_int(i32*, i32, i32) #1

declare dso_local i32 @vt_schedule_flush(%struct.vt_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
